--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -9,7 +9,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 ---
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. <a title="What is Deep Tissue Massage?" href="{{site.url}}/generalmassagetherapy/what-is-deep-tissue-massage">Deep tissue massage</a> treatment is nothing like a relaxing day at a spa, but it is precisely what I need to stay active. I return to Jeremy often to remain limber, flexible, and mobile. A childhood bicycle collision injured my cervical spine. I have bone spurs on two of my neck vertebrae and that injury forever changed the way my spine works. Over the years, my body has learned to adapt by creating knots of painful, rigid tissues in my muscles, tendons, and ligaments. These knots limit my range of motion, reduce circulation, increase inflammation, and cause chronic pain. Years of chronic pain drove me from the things I love: hiking, long walks, swimming, aerobics, and my daily fitness routine. Chronic pain left me feeling defeated.Discovering deep tissue massage gives me hope. Jeremy's deep tissue massage breaks down my knots to restore normal movement. I won't lie - the treatment is painful, but the days and weeks of mobility are worth every minute. With Jeremy's deep tissue massage treatments, aftercare suggestions, and<a title="General Guidelines for Stretching" href="{{site.url}}/stretching/general-guidelines-for-stretching"> stretches</a>, I can enjoy fitness again and I feel empowered because chronic pain doesn't run my life anymore. I do.</p>
@@ -22,7 +22,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long.</p>
@@ -47,7 +47,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Before I came across Jeremy’s name online in my <a title="Google+, Kitchener Massage therapy" href="https://plus.google.com/+Kwmassage/posts?hl=en" target="_blank">google search…</a> I was stressed, over worked and literally carrying all that weight on my shoulders. I had been to massage therapy places before that felt really soothing and calming, but I had real pain that I needed relieved. So I looked into deep tissue therapy and thought I’d give it a try to finally take some of the pain away. The first time was <a title="Does Deep Tissue Massage Hurt?" href="{{site.url}}/generalmassagetherapy/does-deep-tissue-massage-heart">PAINFUL!!</a> Like a good pain But I felt great! Jeremy asked me what my troubles were and showed me some stretches I could do at home to help inbetween sessions. Not only am I feeling better, but so is my wallet! Compared to other places I have tried, he is fair and reasonable. Jeremy is very easy to work with and I enjoy exchanging stories about family and adventure. Thanks Jeremy!</p>
@@ -60,7 +60,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Jeremy is a highly trained and knowledgeable professional. He recently learned the Graston Technique and has been able to resolve some long standing scar tissue issues I've had. Highly therapeutic intervention.</p>
@@ -83,7 +83,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I work in an office and developed carpel tunnel after sitting at a desk that wasn’t set up correctly. Previously, I had been very active, going to the gym, etc., but with this painful condiiton I had to stop playing volleyball or lifting any weights. Physio and recommended exercises had not been very helpful. After my first visit with Jeremy, the pain immediately started to lessen. His treatments over some time have gotten me to the point where I can lift weights again and do normal tasks. Jeremy is a fantastic massage therapist. He worked wonders for me and I can’t thank him enough!!</p>
@@ -96,7 +96,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I see Jeremy for deep tissue treatments to help with neck, shoulder, and back pain from sitting at a computer most of the day. He's <a title="About" href="{{site.url}}/about">personable and professiona</a>l, and his massages really help with my neck/shoulder/back pain. I'd strongly recommend seeing Jeremy if you're looking for a deep tissue massage.</p>
@@ -109,7 +109,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I only have good things to say about <a title="Welcome" href="{{site.url}}/about/welcome">KW Massage</a>. Jeremy is very personable and easy to schedule appointments with. I used to get terrible tension headaches, but monthly appointments with Jeremy have made them all but disappear!</p>
@@ -121,7 +121,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Getting deep tissue massage from Jeremy for the past 6 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. I competed in 2013 Jiu-Jitsu World Championships and Jeremy was one of the cornerstones of my coaching and therapy team. If you're looking to have long term results that last, I would highly recommend using Jeremy and KW Massage. He also has a <a title="Appointments" href="{{site.url}}/clinic-information">great website for booking appointments</a>, it's worth checking it out.</p>
@@ -134,7 +134,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Jeremy at KW massage has been massaging my back, calve and shoulder for a few years. Recently I had developed knee pain. Im so glad I brought it to jeremys attention, he explained how it might be coming from my hip and thigh. Two treatments later and no more knee pain. He has taught me the right stretches to do to stop the pain from coming back. Jeremy loves what he does and is a great massage therapist, the best in Kitchener.</p>
@@ -147,7 +147,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Getting deep tissue massage from Jeremy for the past 4 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. If you're looking to have long term results that last, I would highly recommend using Jeremy and KW Massage. He also has a great website for booking appointments, it's worth checking it out.</p>
@@ -159,7 +159,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Not only does he care about what he does but Jeremy cares about who he's applying his art form to. I can recall a specific instance of having to leave work with a blinding migraine. I was in so much pain I was close to being sick. After a session with Jeremy, I could feel the pathways clearing and did not experience a migraine for a very long time after that. Great personality and wonderful practitioner who listens to his patients!</p>
@@ -171,7 +171,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>When I feel pain in a joint or tendon the first thing I do is stop doing what I'm doing. The second thing I do is wait. If it keeps hurting, I go see Jeremy. I began seeing Jeremy after determining that there was some tendonitis starting in my left elbow. This was as a result of doing a lot of rock climbing over a short period and it was recommended by friends. Jeremy was professional and being a climber he had what I think is a unique understanding of my injury.</p>
@@ -183,7 +183,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I had been getting<a title="Tension Headaches" href="{{site.url}}/generalmassagetherapy/tension-headaches-3"> headaches</a> for years on and off. After a few treatments they went away. Deep tissue therapy is a little painful but well worth it.</p>
@@ -196,7 +196,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Jeremy is the best massage therapist I have been to! I have had pain in my <a title="Low Back Pain" href="{{site.url}}/generalmassagetherapy/low-back-pain">mid-back for many years</a> and he is the only massage therapist who has actually made my back feel better and who has worked to correct the problems with my back. I would highly recommend him to anyone who wants long-lasting results!</p>
@@ -208,7 +208,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I have been going to Kitchener Massage Therapy for over a year and I love it. I began deep tissue massage for a specific problem, now i return every month because it helps maintain and manage some chronic neck, upper back, and headache issues effectively. I found Jeremy to be excellent at targeting areas, but also general work. He has been helpful with adding stretches and exercises that compliment the massages, and has an extensive knowledge "referral pain" to help effectively identify problem areas. He takes the time to get to know you and your body to create the most effective plan for recovery. I will be recommending Jeremy to friends in the future.</p>
@@ -219,7 +219,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 </div>
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>Jeremy is a great massage therapist that I trust and know will help ease muscle and joint pain. I feel very comfortable with him and know that when I come out from my appointments I will feel 100 times better!</p>
@@ -231,7 +231,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>I was recommended to Jeremy from a friend of mine because he is great at deep tissue massage. Sitting in an office chair all day I find my back hurts a lot less now. I would definitely recommend Jeremy to others!</p>
@@ -243,7 +243,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 <div class="testimonial">
 	<div class="testi-image">
-		<img style="border-radius: 0%;" src="/assets/images/img_comatop.gif" alt="Customer Testimonails">
+		<img style="border-radius: 0%;" src="/assets/images/massage_therapy_testimonial_comma.png" alt="Customer Testimonails">
 	</div>
 	<div class="testi-content">
 		<p>When I started working full time, I started getting a lot of back pain from sitting for so long. Jeremy has really helped me get rid of that pain so that I can enjoy my job!</p>
