--- a/about/testimonials/index.html
+++ b/about/testimonials/index.html
@@ -23,7 +23,9 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter" >
-							<iframe width="560" height="315" src="//www.youtube.com/embed/oKya2ymtKYc?rel=0" frameborder="0" allowfullscreen></iframe>
+							<a href="https://www.youtube.com/watch?v=oKya2ymtKYc" data-lightbox="iframe">
+				                <img src="https://img.youtube.com/vi/oKya2ymtKYc/0.jpg" frameborder="0">
+				            </a>
 						</div>
 						<div class="entry-title topmargin testi-meta leftmargin-sm">
 							Kyle
@@ -33,7 +35,9 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 
 					<div class="entry clearfix" data-class-lg="" data-class-md="" data-class-sm="leftmargin-lg" data-class-xs="" data-class-xxs="">
 						<div class="entry-image divcenter">
-							<iframe width="560" height="315" src="//www.youtube.com/embed/RC_Ao0gda3k?rel=0" frameborder="0" allowfullscreen></iframe>
+			                <a href="https://www.youtube.com/watch?v=RC_Ao0gda3k" data-lightbox="iframe">
+				                <img src="https://img.youtube.com/vi/RC_Ao0gda3k/0.jpg" frameborder="0">
+				            </a>
 						</div>
 						
 						<div class="entry-title topmargin testi-meta leftmargin-sm">
