--- a/knowledge-centre/index.html
+++ b/knowledge-centre/index.html
@@ -24,7 +24,7 @@ meta_keywords: Kitchener massage therapy, Kitchener massage therapist, massage t
 <div class="pagination">
   <p>
     {% if paginator.previous_page %}
-    <a href="{{site.url}}{{ paginator.previous_page_path }}/" class="previous">Previous</a>
+    <a href="{{site.url}}{{ paginator.previous_page_path }}" class="previous">Previous</a>
     {% else %}
     <b class="previous">Previous</b>
     {% endif %}
