--- a/_site_production/generalmassagetherapy/rock-climbing-as-a-life-style/index.html
+++ b/_site_production/generalmassagetherapy/rock-climbing-as-a-life-style/index.html
@@ -1,15 +1,3 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=//about/rock-climbing-as-a-lifestyle/">
-        <script type="text/javascript">
+<!DOCTYPE HTML><html lang=en-US><head><meta charset=UTF-8><meta http-equiv=refresh content="1;url=//about/rock-climbing-as-a-lifestyle/"><script type=text/javascript>
             window.location.href = "//about/rock-climbing-as-a-lifestyle/"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='//about/rock-climbing-as-a-lifestyle/'>link!</a>
-    </body>
-</html>
+        </script><title>Page Redirection</title></head><body>If you are not redirected automatically, follow the <a href="//about/rock-climbing-as-a-lifestyle/">link!</a></body></html>
