--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <section id="content" style="overflow: visible;">
 
 <!-- What is Deep Tissue... -->
-<div class="content-wrap notoppadding bottommargin nobottompadding hidden-lg hidden-md hidden-sm" >
+<div class="content-wrap notoppadding bottommargin nobottompadding hidden-lg hidden-md hidden-sm">
   <div class="container clearfix">
     <div class="heading-block title-center page-section nobottommargin topmargin toppadding">
       <h1>Kitchener Massage Therapy</h1>
@@ -30,7 +30,7 @@ excerpt_separator: Kitchener Massage Therapist,  Specializing in Deep Tissue Mas
 <!-- Picture -->
 
 <!-- What is Deep Tissue... -->
-<div class="content-wrap notoppadding" >
+<div class="content-wrap notoppadding" style=" width: 101%; background-color: white;">
   <div class="container clearfix">
     <div class="heading-block title-center page-section nobottommargin toppadding">
       <h1>What is Deep Tissue Massage?</h1>
